# BuckshotRoulette

./: CMakeLists.txt  gameTable.cpp  gameTable.h
include/: enum.h  item.h  player.h  random.h  session.h  shell.h  shotgun.h
include/items/: cigarette.h  item.h  pill.h
src/: aiManager.cpp  aiManager.h  enum.h  input.cpp  input.h  item.cpp  main.cpp  myFrame.cpp  myFrame.h  neural_network.cpp  neural_network.h  pch.h  player.cpp  player.h  random.cpp  random.h  session.cpp  session.h  shell.cpp  shotgun.cpp  shotgun.h
src/items/: adrenaline.cpp  adrenaline.h  beer.cpp  beer.h  cigarette.cpp  cigarette.h  handcuffs.cpp  handcuffs.h  inverter.cpp  inverter.h  item.cpp  item.h  magnifier.cpp  magnifier.h  phone.cpp  phone.h  pill.cpp  pill.h  saw.cpp  saw.h
